--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
